--- a/testplan/Router/CMakeLists.txt
+++ b/testplan/Router/CMakeLists.txt
@@ -7,5 +7,6 @@ set(CMAKE_CXX_STANDARD 20)
 include_directories(../../cpp)
 #include protocol messages
 include_directories(../../solutions/LME/source_gen/LME)
+include_directories(.)
 
-add_executable(Router main.cpp)
+add_executable(Router main.cpp TagValueMsg.h Router.h Router.cpp protocols/LME_protocol.h util.h)
